--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Ionic Selectable V5 Demo
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -13,8 +13,13 @@
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+    <ion-item>
+      <ion-label>Ports</ion-label>
+      <ionic-selectable
+        id="sel1"
+        [items]="items"
+        itemValueField="id"
+        itemTextField="port"
+      ></ionic-selectable>
+    </ion-item>
 </ion-content>
