feat: Add ngModel demo

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -22,7 +22,9 @@
       itemValueField="id"
       itemTextField="port"
       (changed)="onChanged($event)"
+      [(ngModel)]="binding"
     ></ionic-selectable>
   </ion-item>
   <ion-button (click)="open()">Open Ionic Selectable</ion-button>
+  {{binding | json}}
 </ion-content>
